--- a/Sistema de Armazenamento de Questões/Views/Login/ResetPassword.cshtml
+++ b/Sistema de Armazenamento de Questões/Views/Login/ResetPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ResetPasswordModel
 
 @{
-    Layout = "_LayoutDeslogado";
+    Layout = "_LayoutDeslogada";
     ViewData["Title"] = "Redefinir Senha";
 }
 
