--- a/Sistema de Armazenamento de Questões/Views/Questions/Index.cshtml
+++ b/Sistema de Armazenamento de Questões/Views/Questions/Index.cshtml
@@ -54,6 +54,7 @@
 					<th>ID</th>
 					<th>Pergunta</th>
 					<th>Nível</th>
+					<th>Categoria</th>
 					<th>Alternativa Correta</th>
 					<th>Ações</th>
 				</tr>
