--- a/Sistema de Armazenamento de Questões/Views/Home/Index.cshtml
+++ b/Sistema de Armazenamento de Questões/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿﻿
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +7,6 @@
     <title>Sistema de Gerenciamento de Questões</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <img src="https://www.ufc.br/images/_images/a_universidade/identidade_visual/brasao/brasao2_vertical_cor_72dpi.png" alt="Brasão da UFC" class="img-fluid position-absolute" style="top: 80px; left: 30px; width: 200px;" />
 
     <style>
         body {
@@ -16,7 +16,7 @@
         }
 
         .header {
-            background: linear-gradient(to right, #007bff, #0056b3); 
+            background: linear-gradient(to right, #007bff, #0056b3);
             color: white;
             padding: 50px 0;
             text-align: center;
@@ -48,7 +48,7 @@
         }
 
             .btn-custom:hover {
-                background-color: #004085; 
+                background-color: #004085;
             }
 
         .container {
@@ -57,7 +57,7 @@
 
         .img-animation {
             width: 100%;
-            height: auto;
+            height: 311px;
             opacity: 0;
             animation: slideIn 2s ease-out forwards;
         }
@@ -70,6 +70,7 @@
         .row {
             animation: fadeInRow 2s ease-out forwards;
         }
+
     </style>
 </head>
 <body>
@@ -82,13 +83,15 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-md-4 d-flex">
-                <div class="card shadow-lg p-3 mb-5 bg-white rounded w-100">
-                    <img src="https://w7.pngwing.com/pngs/524/374/png-transparent-multicolored-math-illustration-vedic-mathematics-euclidean-children-discuss-math-child-painted-text-thumbnail.png" class="img-animation" alt="Logo Matemática Infantil" data-animation="true">
-                    <div class="card-body">
-                        <h5 class="card-title"></h5>
-                        <p class="card-text">Explore questões de matemática e muito mais!</p>
+                <a href="">
+                    <div class="card shadow-lg p-3 mb-5 bg-white rounded w-100">
+                        <img src="https://w7.pngwing.com/pngs/524/374/png-transparent-multicolored-math-illustration-vedic-mathematics-euclidean-children-discuss-math-child-painted-text-thumbnail.png" class="img-animation" alt="Logo Matemática Infantil" data-animation="true">
+                        <div class="card-body">
+                            <h5 class="card-title"></h5>
+                            <p class="card-text">Explore questões de matemática e muito mais!</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 d-flex">
                 <div class="card shadow-lg p-3 mb-5 bg-white rounded w-100">
