--- a/Sistema de Armazenamento de Questões/Views/Shared/Components/Menu/Default.cshtml
+++ b/Sistema de Armazenamento de Questões/Views/Shared/Components/Menu/Default.cshtml
@@ -14,6 +14,10 @@
             <a class="nav-link text-dark" asp-area="" asp-controller="Questions" asp-action="Index">Questões</a>
         </li>
 
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Questions" asp-action="CreateExam">Criar Prova</a>
+        </li>
+
         @if (Model.Perfil == Sistema_de_Armazenamento_de_Questões.Enums.PerfilEnum.Admin)
         {
             <li class="nav-item">
